# ar_server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  edge_server_details.txt  erver code to improve performancerewriting server code to improve performance  gpu_fv  run.sh  scalability_testing  server  server.cpp
cmake/: ProtobufConfig.cmake  common.cmake
data/: frame.proto
grpc/: grpc_server.cpp
lib/cudasift/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  cudaImage.cu  cudaSiftH.cu
lib/falconn/src/include/falconn/: lsh_nn_table.h  lsh_nn_table_impl.h
logs/: error_1_2019-10-03 12:00:01.txt  error_2019-10-22 16:36:43.txt  error_2019-10-23 11:34:24.txt  error_2019-10-23 12:55:36.txt  error_2019-10-23 16:36:03.txt  error_2019-10-23 16:43:18.txt  error_2019-10-23 17:06:01.txt  error_2019-10-24 12:11:33.txt  log_0_2019-10-03 09:18:33.txt  log_0_2019-10-03 12:00:03.txt  log_0_2019-10-03 12:02:15.txt  log_1_2019-10-03 09:18:31.txt  log_1_2019-10-03 12:00:01.txt  log_1_2019-10-03 12:02:12.txt  log_2019-10-18 17:06:55.txt  log_2019-10-22 11:21:04.txt  log_2019-10-22 16:36:43.txt  log_2019-10-22 16:41:23.txt  log_2019-10-22 16:52:16.txt  log_2019-10-22 17:11:59.txt  log_2019-10-23 11:39:34.txt  log_2019-10-23 12:17:05.txt  log_2019-10-23 12:49:43.txt  log_2019-10-23 12:52:00.txt  log_2019-10-23 12:52:51.txt  log_2019-10-23 12:56:51.txt  log_2019-10-23 12:59:21.txt  log_2019-10-23 15:03:10.txt  log_2019-10-23 15:41:33.txt  log_2019-10-23 16:10:27.txt  log_2019-10-23 16:32:07.txt  log_2019-10-23 16:40:31.txt  log_2019-10-23 16:43:18.txt  log_2019-10-23 16:45:52.txt  log_2019-10-23 16:47:03.txt  log_2019-10-23 16:54:27.txt  log_2019-10-23 17:00:33.txt  log_2019-10-23 17:12:21.txt  log_2019-10-24 09:31:03.txt  log_2019-10-24 09:34:25.txt  (+3 more)
logs_devices/huawei/: logcat_1574767851568.txt  logcat_1574767863296.txt  logcat_1574767894433.txt  logcat_1574767944929.txt  logcat_1574767977976.txt  logcat_1574768036954.txt  logcat_1574768330336.txt
logs_devices/nokia7plus/: logcat_1571919114444.txt  logcat_1571919129615.txt  logcat_1571919283882.txt  logcat_1571919297278.txt  logcat_1571919630704.txt  logcat_1571919692133.txt
logs_devices/pixel/: logcat_1572445525264.txt
logs_server/errors/: error_2019-10-23 17:12:21.txt
logs_server/logs/: log_1574079491.txt  log_2019-10-21 12:13:00.txt  log_2019-10-21 13:36:45.txt  log_2019-10-21 13:58:32.txt  log_2019-10-21 14:19:22.txt  log_2019-10-21 14:20:51.txt  log_2019-10-21 14:22:05.txt  log_2019-10-22 10:10:39.txt  log_2019-10-22 12:10:16.txt  log_2019-10-22 16:43:29.txt  log_2019-10-22 16:49:50.txt  log_2019-10-22 17:20:03.txt  log_2019-10-23 10:14:58.txt  log_2019-10-23 11:17:28.txt  log_2019-10-23 11:33:17.txt  log_2019-10-23 11:34:24.txt  log_2019-10-23 11:39:21.txt  log_2019-10-23 12:29:04.txt  log_2019-10-23 12:43:23.txt  log_2019-10-23 12:51:28.txt  log_2019-10-23 12:54:13.txt  log_2019-10-23 12:55:17.txt  log_2019-10-23 12:55:36.txt  log_2019-10-23 12:57:16.txt  log_2019-10-23 14:38:55.txt  log_2019-10-23 15:07:50.txt  log_2019-10-23 15:36:24.txt  log_2019-10-23 15:50:35.txt  log_2019-10-23 16:05:34.txt  log_2019-10-23 16:08:09.txt  log_2019-10-23 16:21:58.txt  log_2019-10-23 16:27:44.txt  log_2019-10-23 16:28:25.txt  log_2019-10-23 16:30:11.txt  log_2019-10-23 16:36:03.txt  log_2019-10-23 17:06:01.txt  log_2019-10-23 17:07:28.txt  log_2019-10-24 09:32:06.txt  log_2019-10-24 09:50:43.txt  log_2019-10-24 09:58:49.txt  (+33 more)
params/: covariances  means  priors  projection  projectionCenter
results_processing/: client_server_results_processing.ipynb  results_processing.ipynb  scalability_results_processing.ipynb  server_processing.ipynb
results_processing/.ipynb_checkpoints/: client_server_results_processing-checkpoint.ipynb  client_server_results_processing_old-checkpoint.ipynb  results_processing-checkpoint.ipynb  scalability_results_processing-checkpoint.ipynb  server_processing-checkpoint.ipynb
src/: CMakeLists.txt  cuda_files.cu  kernels.cu  reco.cc  reco.cpp  reco.cpp.old  reco.hpp  server.cc  server.cpp  server.cpp.backup  server.cpp.old
src/data/: service_details_oakestra.json
src/services/: encoding.cc  lsh.cc  matching.cc  primary.cc  services.hpp  sift.cc
src_old/: Makefile  grpc_client.cpp  reco.hpp  server.cpp
src_old/nlohmann/: json.hpp
src_old/services/: services.hpp
test/: Makefile  request  result  server  server.cpp
